--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dantleech/phpcrsh",
+    "name": "phpcr/phpcrsh",
     "description": "Shell for PHPCR",
     "require": {
         "symfony/console": "2.3.*",
