--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
 language: php
 
 php:
-  - 5.3
-  - 5.4
+    - 5.3
+    - 5.4
+    - 5.5
 
-script: phpunit
+before_script:
+  - composer self-update
+
+script: phpunit --coverage-text
