Refactored tests to be stateful

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "mockery/mockery": "0.9",
         "symfony/process": "2.3.*",
         "symfony/filesystem": "2.3.*",
-        "phpunit/phpunit": "~3.7.28"
+        "phpunit/phpunit": "~3.7.28",
+        "behat/behat": "~2.5"
     },
     "license": "MIT",
     "authors": [
