All node command sare relative and other refacvtorings
- Removed session:node:* commands in favor of node:* commands

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/process": "2.3.*",
         "symfony/filesystem": "2.3.*",
         "phpunit/phpunit": "~3.7.28",
-        "behat/behat": "~2.5"
+        "behat/behat": "~2.5",
+        "phpspec/phpspec": "2.0"
     },
     "license": "MIT",
     "authors": [
