Fixed workspace use

--- a/src/PHPCR/Shell/Resources/config.dist/alias.yml
+++ b/src/PHPCR/Shell/Resources/config.dist/alias.yml
@@ -2,7 +2,7 @@
 aliases: shell:alias:list
 
 # MySQL commands
-use: workspace:use
+use: workspace:use {arg1}
 workspaces: workspace:list
 
 # Filesystem commands
