--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ before_script:
 
 script: 
   - phpunit --coverage-text
-  - php vendor/behat/behat/bin/behat --format=failed
+  - php vendor/behat/behat/bin/behat
   - php vendor/bin/phpspec run
