Fixed property set command

--- a/src/PHPCR/Shell/Resources/config.dist/alias.yml
+++ b/src/PHPCR/Shell/Resources/config.dist/alias.yml
@@ -17,6 +17,7 @@ ls: node:list {arg1}
 sl: node:clone {arg1} {arg2} # symlink, as in ln -s
 cp: node:copy {arg1} {arg2}
 cat: node:property:show {arg1}
+touch: node:property:set {arg1} {arg2} {arg3}
 
 # Node type commands
 mixins: node-type:list "^mix:"
