--- a/composer.json
+++ b/composer.json
@@ -2,18 +2,19 @@
     "name": "phpcr/phpcr-shell",
     "description": "Shell for PHPCR",
     "require": {
-        "symfony/console": "2.5.*",
-        "jackalope/jackalope-doctrine-dbal": "1.1.*",
-        "jackalope/jackalope-jackrabbit": "1.1.*",
-        "jackalope/jackalope": "1.1.*",
-        "phpcr/phpcr": "2.1.*",
-        "phpcr/phpcr-utils": "1.2.*",
-        "symfony/finder": "2.6.*"
+        "symfony/console": "~2.3",
+        "jackalope/jackalope-doctrine-dbal": "~1.1",
+        "jackalope/jackalope-jackrabbit": "~1.1",
+        "jackalope/jackalope": "~1.1",
+        "phpcr/phpcr": "~2.1",
+        "phpcr/phpcr-utils": "~1.2",
+        "symfony/finder": "~2.3"
     },
+    "minimum-stability": "dev",
     "require-dev": {
         "mockery/mockery": "0.9",
-        "symfony/process": "2.3.*",
-        "symfony/filesystem": "2.3.*",
+        "symfony/process": "~2.3",
+        "symfony/filesystem": "~2.3",
         "phpunit/phpunit": "~3.7.28",
         "behat/behat": "~2.5",
         "phpspec/phpspec": "2.0"
