--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,8 @@ php:
     - 5.4
 
 before_script:
-  - composer self-update
-  - composer install --dev
-  - bash tests/bin/travis_jackrabbit.sh
+    - composer install
+    - bash tests/bin/travis_jackrabbit.sh
 
 script: 
   - phpunit --coverage-text
