--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "phpcr/phpcr": "~2.1",
         "phpcr/phpcr-utils": "~1.2",
         "symfony/finder": "~2.3",
-        "symfony/serializer": "~2.3"
+        "symfony/serializer": "~2.3",
+        "symfony/yaml": "~2.3"
     },
     "minimum-stability": "dev",
     "require-dev": {
