Handle binary properties

--- a/src/PHPCR/Shell/Resources/config.dist/alias.yml
+++ b/src/PHPCR/Shell/Resources/config.dist/alias.yml
@@ -1,5 +1,5 @@
 # Shell shortcuts
-lsa: shell:alias:list
+aliases: shell:alias:list
 creload: shell:config:reload
 cinit: shell:config:init
 
@@ -20,32 +20,38 @@ ln: node:clone {arg1} {arg2} # symlink, as in ln -s
 cp: node:copy {arg1} {arg2}
 cat: node:property:show {arg1}
 touch: node:property:set {arg1} {arg2} {arg3}
+mkdir: node:create {arg1} {arg2}
 
 # Node type commands
-lsmix: node-type:list "^mix:"
-lsnt: node-type:list {arg1}
+mixins: node-type:list "^mix:"
+nodetypes: node-type:list {arg1}
 ntedit: node-type:edit {arg1}
 ntshow: node-type:show {arg1}
 
 # Workspace commands
-wslist: workspace:list
+workspaces: workspace:list
 
 # Namespsce commands
-lsns: workspace:namespace:list {arg1}
+namespaces: workspace:namespace:list {arg1}
 nsset: workspace:namespace:register
 
 # Editor commands
-vim: node:property:edit {arg1} {arg2}
-nano: node:property:edit {arg1} {arg2}
+vi: node:edit {arg1} {arg2}
+vim: node:edit {arg1} {arg2}
+nano: node:edit {arg1} {arg2}
 
 # GNU commands
 man: help {arg1}
 
 # Version commands
+checkin: version:checkin {arg1}
 ci: version:checkin {arg1}
 co: version:checkout {arg1}
+checkout: version:checkout {arg1}
 cp: version:checkpoint {arg1}
+checkpoint: version:checkpoint {arg1}
 vhist: version:history {arg1}
+versions: version:history {arg1}
 
 # Session commands
 save: session:save
