--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,10 @@
     ],
     "autoload": {
         "psr-0": {"": "src"}
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
     }
 }
