--- a/src/PHPCR/Shell/Resources/config.dist/alias.yml
+++ b/src/PHPCR/Shell/Resources/config.dist/alias.yml
@@ -2,6 +2,7 @@
 aliases: shell:alias:list
 creload: shell:config:reload
 cinit: shell:config:init
+clear: shell:clear
 
 # MySQL commands
 use: workspace:use {arg1}
