Fixed wrong assertions in tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,6 @@ before_script:
     - bash tests/bin/travis_jackrabbit.sh
 
 script: 
-  - phpunit --coverage-text
+  - phpunit
   - php vendor/behat/behat/bin/behat
   - php vendor/bin/phpspec run
