--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "symfony/serializer": "~2.3",
         "symfony/yaml": "~2.3",
         "symfony/dependency-injection": "~2.3",
-        "dantleech/glob": "~0.1"
+        "dantleech/glob-finder": "~0.1"
     },
     "minimum-stability": "dev",
     "require-dev": {
