query argument now mandastory for query command

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,9 @@
             "email": "daniel@dantleech.com"
         }
     ],
+    "conflict": {
+        "doctrine/phpcr-bundle": "<=1.2.1"
+    },
     "autoload": {
         "psr-0": {"": "src"}
     },
