Added doctrine-dbal connection tests

--- a/behat.yml
+++ b/behat.yml
@@ -14,3 +14,8 @@ default:
                 - PHPCR\Shell\Test\EmbeddedContext
             paths:
                 - features/all
+        cli:
+            contexts:
+                - PHPCR\Shell\Test\CliContext
+            paths:
+                - features/cli
