--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "phpcr/phpcr-shell",
     "description": "Shell for PHPCR",
     "require": {
-        "symfony/console": "~2.3",
+        "symfony/console": "~2.4",
         "jackalope/jackalope": "~1.1",
         "phpcr/phpcr": "~2.1",
         "phpcr/phpcr-utils": "~1.2",
@@ -10,13 +10,14 @@
         "symfony/serializer": "~2.3",
         "symfony/yaml": "~2.3",
         "symfony/dependency-injection": "~2.3",
+        "symfony/expression-language": "~2.4",
         "dantleech/glob-finder": "~1.0"
     },
     "minimum-stability": "dev",
     "require-dev": {
         "symfony/symfony": "2.6",
-        "symfony/process": "~2.3",
-        "symfony/filesystem": "~2.3",
+        "symfony/process": "~2.4",
+        "symfony/filesystem": "~2.4",
         "phpunit/phpunit": "~3.7.28",
         "behat/behat": "~3.0.0",
         "phpspec/phpspec": "2.0",
