--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
     "autoload": {
         "psr-0": {"": "src"}
     },
+    "bin": ["bin/phpcrsh"],
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
