--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,12 @@ env:
     - BEHAT_SUITE=embedded
     - BEHAT_SUITE=cli
 
-
 php:
     - 5.4
 
 before_script:
     - composer self-update
-    - composer require "symfony/symfony" "2.6.*" --no-update
+    - composer require "symfony/symfony" "~3.0" --no-update
     - composer install
     - bash tests/bin/travis_jackrabbit.sh
 
