--- a/composer.json
+++ b/composer.json
@@ -2,20 +2,20 @@
     "name": "phpcr/phpcr-shell",
     "description": "Shell for PHPCR",
     "require": {
-        "symfony/console": "~2.4|~3.0",
+        "symfony/console": "~2.8|~3.0",
         "jackalope/jackalope": "~1.1",
         "phpcr/phpcr": "~2.1",
         "phpcr/phpcr-utils": "~1.2",
-        "symfony/finder": "~2.3|~3.0",
-        "symfony/serializer": "~2.3|~3.0",
-        "symfony/yaml": "~2.3|~3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
-        "symfony/expression-language": "~2.4|~3.0",
+        "symfony/finder": "~2.8|~3.0",
+        "symfony/serializer": "~2.8|~3.0",
+        "symfony/yaml": "~2.8|~3.0",
+        "symfony/dependency-injection": "~2.8|~3.0",
+        "symfony/expression-language": "~2.8|~3.0",
         "dantleech/glob-finder": "~1.0@dev"
     },
     "minimum-stability": "stable",
     "require-dev": {
-        "symfony/symfony": "~3.0",
+        "symfony/symfony": "~2.8|~3.0",
         "phpunit/phpunit": "~4.0",
         "behat/behat": "~3.0",
         "phpspec/phpspec": "3.0",
