--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "symfony/yaml": "~2.8|~3.0",
         "symfony/dependency-injection": "~2.8|~3.0",
         "symfony/expression-language": "~2.8|~3.0",
-        "dantleech/glob-finder": "~1.0@dev"
+        "dantleech/glob-finder": "~1.0"
     },
     "minimum-stability": "stable",
     "require-dev": {
