--- a/composer.json
+++ b/composer.json
@@ -3,23 +3,22 @@
     "description": "Shell for PHPCR",
     "require": {
         "php": "^5.6|^7.0",
-        "symfony/console": "~2.8|~3.0",
+        "symfony/console": "~2.8 || ~3.4 || ~4.0",
         "jackalope/jackalope": "~1.1",
         "phpcr/phpcr": "~2.1",
         "phpcr/phpcr-utils": "~1.2",
-        "symfony/finder": "~2.8|~3.0",
-        "symfony/serializer": "~2.8|~3.0",
-        "symfony/yaml": "~2.8|~3.0",
-        "symfony/dependency-injection": "~2.8|~3.0",
-        "symfony/expression-language": "~2.8|~3.0",
+        "symfony/finder": "~2.8 || ~3.4 || ~4.0",
+        "symfony/serializer": "~2.8 || ~3.4 || ~4.0",
+        "symfony/yaml": "~2.8 || ~3.4 || ~4.0",
+        "symfony/dependency-injection": "~2.8 || ~3.4 || ~4.0",
+        "symfony/expression-language": "~2.8 || ~3.4 || ~4.0",
         "dantleech/glob-finder": "~1.0"
     },
-    "minimum-stability": "stable",
     "require-dev": {
-        "symfony/symfony": "~2.8|~3.0",
-        "phpunit/phpunit": "~4.0",
+        "symfony/symfony": "~2.8 || ~3.4 || ~4.0",
+        "phpunit/phpunit": "~5.7",
         "behat/behat": "~3.0",
-        "phpspec/phpspec": "3.0",
+        "phpspec/phpspec": "~3.0 || ~4.0",
         "jackalope/jackalope-doctrine-dbal": "~1.1",
         "jackalope/jackalope-jackrabbit": "~1.1"
     },
