--- a/.travis.yml
+++ b/.travis.yml
@@ -90,6 +90,6 @@ before_script:
     - bash tests/bin/travis_jackrabbit.sh
 
 script: 
-  - phpunit
+  - vendor/bin/simple-phpunit
   - php vendor/bin/phpspec run
   - php vendor/behat/behat/bin/behat --suite=$BEHAT_SUITE
