--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "dantleech/glob-finder": "~1.0"
     },
     "require-dev": {
+        "symfony/phpunit-bridge": "~5.0",
         "symfony/symfony": "~2.8|~3.0|~4.0|~5.0",
-        "phpunit/phpunit": "~5.7",
         "behat/behat": "~3.1",
-        "phpspec/phpspec": "~3.2|~4.0",
+        "phpspec/phpspec": "~3.2|~4.0|~5.0|~6.0",
         "jackalope/jackalope-doctrine-dbal": "~1.2",
         "jackalope/jackalope-jackrabbit": "~1.2"
     },
