--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -6,6 +6,10 @@
     bootstrap="vendor/autoload.php"
     >
 
+    <php>
+        <env name="SYMFONY_PHPUNIT_REMOVE_RETURN_TYPEHINT" value="1"/>
+    </php>
+
     <testsuites>
         <testsuite name="PHPCR Shell Test Suite">
             <directory>./tests</directory>
