--- a/composer.json
+++ b/composer.json
@@ -2,25 +2,25 @@
     "name": "phpcr/phpcr-shell",
     "description": "Shell for PHPCR",
     "require": {
-        "php": "^5.6|^7.0",
-        "symfony/console": "~2.8|~3.0|~4.0|~5.0",
-        "jackalope/jackalope": "~1.1",
+        "php": "^7.2",
+        "symfony/console": "^5.0",
+        "jackalope/jackalope": "^1.1",
         "phpcr/phpcr": "~2.1",
-        "phpcr/phpcr-utils": "~1.2", 
-        "symfony/finder": "~2.8|~3.0|~4.0|~5.0",
-        "symfony/serializer": "~2.8|~3.0|~4.0|~5.0",
-        "symfony/yaml": "~2.8|~3.0|~4.0|~5.0",
-        "symfony/dependency-injection": "~2.8|~3.0|~4.0|~5.0",
-        "symfony/expression-language": "~2.8|~3.0|~4.0|~5.0",
-        "dantleech/glob-finder": "~1.0"
+        "phpcr/phpcr-utils": "^1.2",
+        "symfony/finder": "^5.0",
+        "symfony/serializer": "^5.0",
+        "symfony/yaml": "^5.0",
+        "symfony/dependency-injection": "^5.0",
+        "symfony/expression-language": "^5.0",
+        "dantleech/glob-finder": "^1.0"
     },
     "require-dev": {
-        "symfony/phpunit-bridge": "~5.0",
-        "symfony/symfony": "~2.8|~3.0|~4.0|~5.0",
-        "behat/behat": "~3.1",
-        "phpspec/phpspec": "~3.2|~4.0|~5.0|~6.0",
-        "jackalope/jackalope-doctrine-dbal": "~1.2",
-        "jackalope/jackalope-jackrabbit": "~1.2",
+        "phpunit/phpunit": "^8.5",
+        "symfony/symfony": "^5.0",
+        "behat/behat": "^3.1",
+        "phpspec/phpspec": "^6.0",
+        "jackalope/jackalope-doctrine-dbal": "^1.2",
+        "jackalope/jackalope-jackrabbit": "^1.2",
         "webmozart/assert": "^1.6"
     },
     "suggest": {
