--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,7 @@
         "behat/behat": "^3.1",
         "phpspec/phpspec": "^6.0",
         "jackalope/jackalope-doctrine-dbal": "^1.2",
-        "jackalope/jackalope-jackrabbit": "^1.2",
-        "webmozart/assert": "^1.6"
+        "jackalope/jackalope-jackrabbit": "^1.2"
     },
     "suggest": {
         "jackalope/jackalope-doctrine-dbal": "To connect to jackalope doctrine-dbal",
