Upgrade to PhpUnit 8 and remove webmozart/asserts again

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,6 @@ before_script:
     - bash tests/bin/travis_jackrabbit.sh
 
 script:
-  - vendor/bin/simple-phpunit
+  - vendor/bin/phpunit
   - php vendor/bin/phpspec run
   - php vendor/behat/behat/bin/behat --suite=$BEHAT_SUITE
