--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": "^7.2",
         "symfony/console": "^5.0",
         "jackalope/jackalope": "^1.1",
-        "phpcr/phpcr": "~2.1",
+        "phpcr/phpcr": "^2.1",
         "phpcr/phpcr-utils": "^1.2",
         "symfony/finder": "^5.0",
         "symfony/serializer": "^5.0",
@@ -19,8 +19,8 @@
         "symfony/symfony": "^5.0",
         "behat/behat": "^3.6.1",
         "phpspec/phpspec": "^6.0",
-        "jackalope/jackalope-doctrine-dbal": "^1.2",
-        "jackalope/jackalope-jackrabbit": "^1.2"
+        "jackalope/jackalope-doctrine-dbal": "^1.3",
+        "jackalope/jackalope-jackrabbit": "^1.3"
     },
     "suggest": {
         "jackalope/jackalope-doctrine-dbal": "To connect to jackalope doctrine-dbal",
