--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "phpcr/phpcr-shell",
     "description": "Shell for PHPCR",
     "require": {
-        "php": "^7.2",
+        "php": "^7.2 || ^8.0",
         "symfony/console": "^5.0",
         "jackalope/jackalope": "^1.3.4",
         "phpcr/phpcr": "^2.1",
