--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,9 @@
         "dantleech/glob-finder": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
+        "phpunit/phpunit": "^8.5 || ^9.5",
         "behat/behat": "^3.6",
-        "phpspec/phpspec": "^6.0",
+        "phpspec/phpspec": "^6.0 || ^7.0",
         "jackalope/jackalope-doctrine-dbal": "^1.3",
         "jackalope/jackalope-jackrabbit": "^1.3"
     },
