Use behat cli from vendor/bin

--- a/.github/workflows/test-application.yaml
+++ b/.github/workflows/test-application.yaml
@@ -68,4 +68,4 @@ jobs:
               run: |
                   vendor/bin/phpunit
                   vendor/bin/phpspec run
-                  vendor/behat/behat/bin/behat --suite=${{ matrix.behat-suite }}
+                  vendor/behat/behat --suite=${{ matrix.behat-suite }}
