--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
         "dantleech/glob-finder": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5 || ^9.5",
+        "phpunit/phpunit": "^9.5",
         "behat/behat": "^3.6",
         "phpspec/phpspec": "^6.0 || ^7.0",
         "jackalope/jackalope-doctrine-dbal": "^1.3",
-        "jackalope/jackalope-jackrabbit": "^1.3"
+        "jackalope/jackalope-jackrabbit": "^1.3",
+        "phpspec/prophecy-phpunit": "^2.0"
     },
     "suggest": {
         "jackalope/jackalope-doctrine-dbal": "To connect to jackalope doctrine-dbal",
