--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "behat/behat": "^3.6",
-        "phpspec/phpspec": "^6.0 || ^7.0",
+        "behat/behat": "^3.10",
+        "phpspec/phpspec": "^7.2",
         "jackalope/jackalope-doctrine-dbal": "^1.3",
         "jackalope/jackalope-jackrabbit": "^1.3",
         "phpspec/prophecy-phpunit": "^2.0"
