--- a/.github/workflows/test-application.yaml
+++ b/.github/workflows/test-application.yaml
@@ -62,7 +62,7 @@ jobs:
 
             - name: Start Jackrabbit
               run: |
-                  tests/bin/travis_jackrabbit.sh
+                  JACKRABBIT_VERSION=2.21.10 tests/bin/travis_jackrabbit.sh
 
             - name: Execute test cases
               run: |
