--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,6 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "git@github.com:alexander-schranz/jackalope-jackrabbit.git"
-        },
-        {
-            "type": "vcs",
             "url": "git@github.com:alexander-schranz/phpcr-utils.git"
         },
         {
@@ -33,7 +29,7 @@
         "behat/behat": "^3.10",
         "phpspec/phpspec": "^7.2",
         "jackalope/jackalope-doctrine-dbal": "^1.3",
-        "jackalope/jackalope-jackrabbit": "dev-bugfix/content-type-parsing as 1.4.4",
+        "jackalope/jackalope-jackrabbit": "dev-master as 1.4.4",
         "phpspec/prophecy-phpunit": "^2.0"
     },
     "suggest": {
