--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,12 @@
 {
     "name": "phpcr/phpcr-shell",
     "description": "Shell for PHPCR",
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "git@github.com:alexander-schranz/phpcr-utils.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@github.com:alexander-schranz/jackalope.git"
-        }
-    ],
     "require": {
         "php": "^8.0",
         "symfony/console": "^5.0 || ^6.0",
-        "jackalope/jackalope": "dev-enhancement/php-8-1-issues as 1.4.5",
+        "jackalope/jackalope": "^1.3.4",
         "phpcr/phpcr": "^2.1",
-        "phpcr/phpcr-utils": "dev-enhancement/php-8-1-issues as 1.6.2",
+        "phpcr/phpcr-utils": "^1.2",
         "symfony/finder": "^5.0 || ^6.0",
         "symfony/serializer": "^5.0 || ^6.0",
         "symfony/yaml": "^5.0 || ^6.0",
@@ -29,7 +19,7 @@
         "behat/behat": "^3.10",
         "phpspec/phpspec": "^7.2",
         "jackalope/jackalope-doctrine-dbal": "^1.3",
-        "jackalope/jackalope-jackrabbit": "dev-master as 1.4.4",
+        "jackalope/jackalope-jackrabbit": "^1.4.4",
         "phpspec/prophecy-phpunit": "^2.0"
     },
     "suggest": {
