--- a/.github/workflows/test-application.yaml
+++ b/.github/workflows/test-application.yaml
@@ -14,45 +14,34 @@ jobs:
         env:
             SYMFONY_DEPRECATIONS_HELPER: ${{ matrix.symfony-deprecation-helper }}
             BEHAT_SUITE: ${{ matrix.behat-suite }}
+            COMPOSER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
         strategy:
             fail-fast: false
 
             matrix:
                 include:
-                    - php-version: '7.2'
+                    - php-version: '8.0'
                       dependencies: lowest
                       behat-suite: standalone
 
-                    - php-version: '7.2'
+                    - php-version: '8.0'
                       dependencies: lowest
                       behat-suite: embedded
 
-                    - php-version: '7.2'
+                    - php-version: '8.0'
                       dependencies: lowest
                       behat-suite: cli
 
-                    - php-version: '7.4'
+                    - php-version: '8.1'
                       dependencies: highest
                       behat-suite: standalone
 
-                    - php-version: '7.4'
+                    - php-version: '8.1'
                       dependencies: highest
                       behat-suite: embedded
 
-                    - php-version: '7.4'
-                      dependencies: highest
-                      behat-suite: cli
-
-                    - php-version: '8.0'
-                      dependencies: highest
-                      behat-suite: standalone
-
-                    - php-version: '8.0'
-                      dependencies: highest
-                      behat-suite: embedded
-
-                    - php-version: '8.0'
+                    - php-version: '8.1'
                       dependencies: highest
                       behat-suite: cli
 
@@ -67,17 +56,17 @@ jobs:
                   tools: 'composer:v2'
 
             - name: Install dependencies with Composer
-              uses: ramsey/composer-install@v1
+              uses: ramsey/composer-install@v2
               with:
                   dependency-versions: ${{ matrix.dependencies }}
                   composer-options: ${{ matrix.composer-options }}
 
             - name: Start Jackrabbit
               run: |
-                  tests/bin/travis_jackrabbit.sh
+                  JACKRABBIT_VERSION=2.21.10 tests/bin/travis_jackrabbit.sh
 
             - name: Execute test cases
               run: |
                   vendor/bin/phpunit
                   vendor/bin/phpspec run
-                  vendor/behat/behat/bin/behat --suite=${{ matrix.behat-suite }}
+                  vendor/bin/behat --suite=${{ matrix.behat-suite }}
