--- a/composer.json
+++ b/composer.json
@@ -2,25 +2,25 @@
     "name": "phpcr/phpcr-shell",
     "description": "Shell for PHPCR",
     "require": {
-        "php": "^7.2 || ^8.0",
-        "symfony/console": "^5.0",
+        "php": "^8.0",
+        "symfony/console": "^5.0 || ^6.0",
         "jackalope/jackalope": "^1.3.4",
         "phpcr/phpcr": "^2.1",
         "phpcr/phpcr-utils": "^1.2",
-        "symfony/finder": "^5.0",
-        "symfony/serializer": "^5.0",
-        "symfony/yaml": "^5.0",
-        "symfony/dependency-injection": "^5.0",
-        "symfony/expression-language": "^5.0",
+        "symfony/finder": "^5.0 || ^6.0",
+        "symfony/serializer": "^5.0 || ^6.0",
+        "symfony/yaml": "^5.0 || ^6.0",
+        "symfony/dependency-injection": "^5.0 || ^6.0",
+        "symfony/expression-language": "^5.0 || ^6.0",
         "dantleech/glob-finder": "^1.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.5",
-        "symfony/symfony": "^5.0",
-        "behat/behat": "^3.6",
-        "phpspec/phpspec": "^6.0",
+        "phpunit/phpunit": "^9.5",
+        "behat/behat": "^3.10",
+        "phpspec/phpspec": "^7.2",
         "jackalope/jackalope-doctrine-dbal": "^1.3",
-        "jackalope/jackalope-jackrabbit": "^1.3"
+        "jackalope/jackalope-jackrabbit": "^1.4.4",
+        "phpspec/prophecy-phpunit": "^2.0"
     },
     "suggest": {
         "jackalope/jackalope-doctrine-dbal": "To connect to jackalope doctrine-dbal",
