--- a/composer.json
+++ b/composer.json
@@ -40,10 +40,5 @@
     "autoload": {
         "psr-0": {"": "src"}
     },
-    "bin": ["bin/phpcrsh"],
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.x-dev"
-        }
-    }
+    "bin": ["bin/phpcrsh"]
 }
