--- a/.github/workflows/test-application.yaml
+++ b/.github/workflows/test-application.yaml
@@ -48,14 +48,17 @@ jobs:
                     - php-version: '8.2'
                       dependencies: highest
                       behat-suite: standalone
+                      composer-stability: 'dev'
 
                     - php-version: '8.2'
                       dependencies: highest
                       behat-suite: embedded
+                      composer-stability: 'dev'
 
                     - php-version: '8.2'
                       dependencies: highest
                       behat-suite: cli
+                      composer-stability: 'dev'
 
         steps:
             - name: Checkout project
@@ -73,6 +76,10 @@ jobs:
               with:
                   php-version: ${{ matrix.php-version }}
                   tools: 'composer:v2'
+
+            - name: Set composer stability
+              if: ${{ matrix.composer-stability }}
+              run: composer config minimum-stability ${{ matrix.composer-stability }}
 
             - name: Install dependencies with Composer
               uses: ramsey/composer-install@v2
